# graspo

./: .dockerignore  .gitattributes  .gitignore  AGENTS.md  BUG_INVESTIGATION.md  CLAUDE.md  Dockerfile  LICENSE  LONG_RUN.md  MIGRATION_PLAN.md  QUICKSTART.md  README.md  README.zh-CN.md  THIRD_PARTY_NOTICES.md  config_example.yaml  pyproject.toml
configs/: accelerate_cpu.yaml  accelerate_fsdp_8gpu.yaml  anchor_generation.yaml  ard_sft_lora.yaml  config_graspoflow_tp2_pp4_114.yaml  config_graspoflow_tp4_114_longrun.yaml  config_graspoflow_tp4_longrun.yaml  config_graspoflow_tp4_v0.9.0_longrun.yaml  config_pp8_114.yaml  config_pp8_v0.7.0_114.yaml  config_tp4_longrun.yaml  config_tp4_v0.7.0_longrun.yaml  fsdp_lora_graspo.yaml  graspo.yaml  graspoflow_example.yaml  qwen35_9b_mm_tp2.yaml  qwen35_9b_tp4.yaml  qwen35_9b_tp4_longrun.yaml  qwen36_27b_pp8.yaml  qwen36_27b_pp8_longrun.yaml  qwen36_27b_tp2_pp4.yaml  qwen3_8b_tp2.yaml  sft_example.yaml
configs/backends/: hf_reference.yaml  megatron_native.yaml  native_tp.yaml
configs/profiles/: experimental_qwen3_5_9b_native_tp2.yaml  experimental_qwen3_6_27b_native_tp8.yaml  qwen3_5_9b_native_tp2.yaml  qwen3_6_27b_native_tp4.yaml  qwen3_8b_megatron_native_tp2_original_smoke.yaml  qwen3_8b_megatron_native_tp2_overnight.yaml  qwen3_8b_megatron_native_tp2_smoke.yaml  qwen3_8b_megatron_native_tp2_stage1.yaml  qwen3_8b_megatron_native_tp2_stage2.yaml  qwen3_8b_native_tp2_original_smoke.yaml  qwen3_8b_native_tp2_overnight.yaml  qwen3_8b_native_tp2_smoke.yaml  qwen3_8b_native_tp2_stage1.yaml  qwen3_8b_native_tp2_stage2.yaml
data/: elam_graspo_train.jsonl  sample.jsonl  sample_multimodal.jsonl  sample_tool_call.jsonl
docker/: Dockerfile  Dockerfile.fix_inv_freq  Dockerfile.from-local  build.sh
docs/: BADGE-constitution.zh-CN.md  README.md  architecture.md  graspoflow.md  training_methodology.md
docs/en/: README.md  algorithm.md  (+7 more)
examples/: qwen.yaml
scripts/: analyze_native_profile.py  analyze_training.py  build_docker.sh  compare_114_228.sh  config_ec_true.yaml  config_graspoflow_tp2_pp4_114.yaml  config_tp1_test.yaml  config_tp4_sum_fix.yaml  convert_to_and_mode.py  debug_e2e_fixed.py  debug_e2e_generation.py  debug_embed_diff.py  debug_failing_samples.py  debug_final_e2e.py  debug_inv_freq_dtype.py  debug_inv_freq_verify.py  debug_kv_trace.py  debug_logit_crossrank.py  debug_logit_trace.py  debug_lora_divergence.py  debug_lora_dump.py  debug_lora_multistep.py  debug_lora_multistep_grad.py  debug_lora_opt_step.py  debug_lora_sync_fix.py  debug_lora_tp_grad.py  debug_per_layer_hidden.py  debug_pipeline_trace.py  debug_single_vs_batch.py  debug_sync_test.py  debug_tp1_batch.py  debug_tp1_compare.py  debug_tp4_adapter_test.py  debug_tp4_compare.py  debug_train_with_lora_track.py  debug_visual_lora_dump.py  debug_visual_trace.py  debug_visual_weights.py  eval_inference.py  evaluate_native_checkpoint.py  (+18 more)
tests/: test_anchor.py  test_backend_selector.py  test_cli.py  test_compare.py  test_data.py  test_gpu_memory_recorder.py  test_graspo_parity.py  test_graspo_parity_core.py  test_graspoflow.py  test_lora.py  test_lora_io.py  test_megatron_native.py  test_native_checkpoint_eval.py  test_native_profile_analyzer.py  test_native_tp.py  test_qwen_tp_adapter.py  test_reward.py  test_rope_ndim.py  test_sft_data.py
(+174 files in other folders)
