[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "graspo"
version = "0.2.0"
description = "GRASPO LoRA reinforcement learning with a self-owned native TP/PP backend."
readme = "README.md"
requires-python = ">=3.11,<3.12"
license = "MIT"
authors = [{ name = "Godthrone" }]
dependencies = [
  "pyyaml>=6.0.0",
  "safetensors>=0.4.0",
  "torch>=2.5.0",
  "transformers>=5.9.0",
  "pillow>=10.0.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0.0",
  "ruff>=0.6.0",
]

[project.scripts]
graspo = "graspo.cli.app:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
