[build-system]
requires = ["setuptools>=75.0", "setuptools-scm>=8.0"]
build-backend = "setuptools.build_meta"

[project]
name = "graspo"
dynamic = ["version"]
description = "GRASPO (Group Relative Adaptive Structured Policy Optimization) — LoRA reinforcement learning with a self-owned native TP/PP backend."
readme = "README.md"
requires-python = ">=3.11,<3.13"
license = "MIT"
authors = [{ name = "Godthrone" }]
dependencies = [
  "pydantic>=2.0",
  "pyyaml>=6.0.0",
  "safetensors>=0.4.0",
  "torch>=2.5.0",
  "transformers>=5.9.0",
  "pillow>=10.0.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0.0",
  "ruff>=0.6.0",
  "mypy>=1.0",
]

[project.scripts]
graspo = "graspo.cli.app:main"

[tool.setuptools.package-dir]
"" = "src"

[tool.setuptools_scm]
# Version from git tags. v0.10.2 → "0.10.2", dirty tree → "0.10.3.dev0+d20250714"
# Docker builds set SETUPTOOLS_SCM_PRETEND_VERSION to avoid shallow-clone issues.
tag_regex = "^(?:v)?(?P<version>[0-9]+\\.[0-9]+\\.[0-9]+)$"

[tool.ruff]
line-length = 100
target-version = "py311"
extend-exclude = ["*.jsonl"]

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "BLE"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.mypy]
python_version = "3.12"
ignore_missing_imports = true
